--- a/web/shell.html
+++ b/web/shell.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <title>Pong WASM</title>
-  <link rel="stylesheet" href="style.css?v=20260227-26" />
+  <link rel="stylesheet" href="style.css?v=20260228-27" />
 </head>
 <body>
   <div class="page">
@@ -237,6 +237,10 @@
             <span class="mode-title" id="mode-arcade-title">Аркада+</span>
             <span class="mode-desc" id="mode-arcade-desc">PvP до 11, темп выше и плотная динамика</span>
           </button>
+          <button id="btn-mode-bet" class="mode-card secondary" data-mode="bet">
+            <span class="mode-title" id="mode-bet-title">Bet Mode</span>
+            <span class="mode-desc" id="mode-bet-desc">Ставка токенов на исход матча против Hard ИИ</span>
+          </button>
         </div>
         <div class="mode-summary" id="mode-summary">Выберите режим, чтобы продолжить.</div>
 
@@ -271,6 +275,16 @@
               <option value="1.18" id="opt-tempo-118">Турбо</option>
             </select>
           </div>
+          <div class="field compact is-hidden" id="bet-field">
+            <label for="match-bet" id="label-match-bet">Ставка</label>
+            <select id="match-bet">
+              <option value="25" id="opt-bet-25">25 TOK</option>
+              <option value="50" id="opt-bet-50">50 TOK</option>
+              <option value="100" id="opt-bet-100" selected>100 TOK</option>
+              <option value="200" id="opt-bet-200">200 TOK</option>
+            </select>
+          </div>
+          <div class="setup-lock-note" id="bet-note"></div>
           <div class="setup-lock-note" id="setup-lock-note"></div>
 
           <div class="extras-title" id="extras-title-mods">Модификаторы</div>
@@ -337,9 +351,9 @@
       noInitialRun: true,
     };
   </script>
-  <script src="config.js?v=20260227-26"></script>
+  <script src="config.js?v=20260228-27"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="app.js?v=20260227-26"></script>
+  <script src="app.js?v=20260228-27"></script>
 
   {{{ SCRIPT }}}
 </body>
